--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,82 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@INPROCEEDINGS{8228567,
+  author={Afakh, Muhammad Labiyb and Risnumawan, Anhar and Anggraeni, Martianda Erste and Tamara, Mohamad Nasyir and Ningrum, Endah Suryawati},
+  booktitle={2017 International Electronics Symposium on Knowledge Creation and Intelligent Computing (IES-KCIC)}, 
+  title={Aksara jawa text detection in scene images using convolutional neural network}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={77-82},
+  doi={10.1109/KCIC.2017.8228567}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@INPROCEEDINGS{8615541,
+  author={Anwar, Muhamad Khoirul and Muhajir, Muhammad and Sutoyo, Edi and Afakh, Muhammad Labiyb and Risnumawan, Anhar and Purnomo, Didik Setyo and Suryawati Ningrum, Endah and Darojah, Zaqiatud and Darmawan, Adytia and Tamara, Mohamad Nasyir},
+  booktitle={2018 International Electronics Symposium on Engineering Technology and Applications (IES-ETA)}, 
+  title={Deep Features Representation for Automatic Targeting System of Gun Turret}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={107-112},
+  doi={10.1109/ELECSYM.2018.8615541}}
+
+@INPROCEEDINGS{8534941,
+  author={Mas'udi, M. Irfan and Afakh, M. Labiyb and Ardilla, Fernando and Wibowo, Iwan Kurnianto and Marta, Bayu Sandi},
+  booktitle={2018 10th International Conference on Information Technology and Electrical Engineering (ICITEE)}, 
+  title={Implementation of PID Control in Active Ball Handling System of Middle Size Robot Soccer}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={242-247},
+  doi={10.1109/ICITEED.2018.8534941}}
+
+@INPROCEEDINGS{8534842,
+  author={Afakh, Muhammad Labiyb and Masudi, Muhammad Irfan and Ardilla, Fernando and Wibowo, Iwan Kurnianto and Marta, Bayu Sandi},
+  booktitle={2018 10th International Conference on Information Technology and Electrical Engineering (ICITEE)}, 
+  title={Bicycle Path Planning on Omnidirectional Mobile Robot Using Fuzzy Logic Controller}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={237-241},
+  doi={10.1109/ICITEED.2018.8534842}
+  }
+
+@INPROCEEDINGS{9561656,
+  author={Afakh, Muhammad Labiyb and Sato, Terukazu and Sato, Hidaka and Takesue, Naoyuki},
+  booktitle={2021 IEEE International Conference on Robotics and Automation (ICRA)}, 
+  title={Development of Flapping Robot with Self-Takeoff from The Ground Capability}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={321-327},
+  doi={10.1109/ICRA48506.2021.9561656}
+  }
+
+  @article{Afakh2023,
+  title = {Study Towards a Flapping Robot Maintaining Attitude During Gliding},
+  volume = {13},
+  ISSN = {2088-5334},
+  url = {http://dx.doi.org/10.18517/ijaseit.13.2.18289},
+  DOI = {10.18517/ijaseit.13.2.18289},
+  number = {2},
+  journal = {International Journal on Advanced Science,  Engineering and Information Technology},
+  publisher = {Insight Society},
+  author = {Afakh,  Muhammad Labiyb and Sato,  Hidaka and Takesue,  Naoyuki},
+  year = {2023},
+  month = apr,
+  pages = {681}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+  @article{Hidaka SATO2021,
+  title={Development of Flapping-wing Robot with Independently Controllable Wings},
+  author={Hidaka SATO and Muhammad Labiyb Afakh and Naoyuki TAKESUE},
+  journal={The Abstracts of the international conference on advanced mechatronics : toward evolutionary fusion of IT and mechatronics : ICAM},
+  volume={2021.7},
+  number={ },
+  pages={GS6-2},
+  year={2021},
+  doi={10.1299/jsmeicam.2021.7.GS6-2}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
