--- a/_posts/2023-04-24-videos.md
+++ b/_posts/2023-04-24-videos.md
@@ -23,10 +23,10 @@ This is an example post with videos. It supports local video files.
 It does also support embedding videos from different sources. Here are some examples:
 
 <div class="row mt-3">
-    <div class="col-sm mt-3 mt-md-0">
-        {% include video.html path="https://www.youtube.com/embed/jNQXAC9IVRw" class="img-fluid rounded z-depth-1" %}
+    <div class="col-md mt-3 mt-md-0">
+        {% include video.html path="https://www.youtube.com/embed/8nfgbyg1_oo?si=xo37-fjSHm0PutoW&amp;controls=0" class="img-fluid rounded z-depth-1" %}
     </div>
-    <div class="col-sm mt-3 mt-md-0">
-        {% include video.html path="https://player.vimeo.com/video/524933864?h=1ac4fd9fb4&title=0&byline=0&portrait=0" class="img-fluid rounded z-depth-1" %}
+    <div class="col-md mt-3 mt-md-0">
+        {% include video.html path="https://www.youtube.com/embed/8nfgbyg1_oo?si=xo37-fjSHm0PutoW" class="img-fluid rounded z-depth-1" %}
     </div>
 </div>
