updated CV and publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,4 +79,15 @@
   doi={10.1299/jsmeicam.2021.7.GS6-2}
 }
 
+@article{afakh2024performance,
+  author = {Afakh, Muhammad Labiyb and Sato, Hidaka and Takesue, Naoyuki},
+  title = {Performance Evaluation and Wing Deformation Analysis of Flapping-Wing Aerial Vehicles with Varying Flapping Parameters and Patterns},
+  journal = {Journal of Robotics and Mechatronics},
+  volume = {36},
+  number = {5},
+  year = {2024},
+  month = {10},
+  note = {(in press)},
+  pages = {}
+}
 
