Added new papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,15 +79,25 @@
   doi={10.1299/jsmeicam.2021.7.GS6-2}
 }
 
-@article{afakh2024performance,
-  author = {Afakh, Muhammad Labiyb and Sato, Hidaka and Takesue, Naoyuki},
-  title = {Performance Evaluation and Wing Deformation Analysis of Flapping-Wing Aerial Vehicles with Varying Flapping Parameters and Patterns},
-  journal = {Journal of Robotics and Mechatronics},
-  volume = {36},
-  number = {5},
-  year = {2024},
-  month = {10},
-  note = {(in press)},
-  pages = {}
+@article{Afakh2024,
+  title={Performance Evaluation and Wing Deformation Analysis of Flapping-Wing Aerial Vehicles with Varying Flapping Parameters and Patterns},
+  author={Muhammad Labiyb Afakh and Hidaka Sato and Naoyuki Takesue},
+  journal={Journal of Robotics and Mechatronics},
+  volume={36},
+  number={5},
+  pages={1143-1155},
+  year={2024},
+  doi={10.20965/jrm.2024.p1143}
+}
+
+@article{Hidaka2024,
+  title={Senswing: A Force Sensing Wing for Intelligent Flapping-Wing Aerial Vehicles—Wing Design and Comprehensive Evaluation of Force Sensing Capabilities},
+  author={Hidaka Sato and Muhammad Labiyb Afakh and Naoyuki Takesue},
+  journal={Journal of Robotics and Mechatronics},
+  volume={36},
+  number={5},
+  pages={1156-1166},
+  year={2024},
+  doi={10.20965/jrm.2024.p1156}
 }
 
