Updated project structure Updated publication Updated announcement

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -100,4 +100,11 @@
   year={2024},
   doi={10.20965/jrm.2024.p1156}
 }
-
+@inproceedings{2025servo,
+  title={Servo-Driven Flapping-Wing Aerial Vehicle ({FWAV}): {Payload} Capacity and Navigation Performance},
+  author={Muhammad Labiyb Afakh and Azhar Aulia Saputra and Hidaka Sato and Kazuyoshi Wada and Naoyuki Takesue},
+  booktitle={2025 {IEEE/SICE} International Symposium on System Integration ({SII})},
+  year={2025},
+  note={[Accepted]},
+  organization={IEEE}
+}
