Updated content on about etc

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -105,6 +105,6 @@
   author={Muhammad Labiyb Afakh and Azhar Aulia Saputra and Hidaka Sato and Kazuyoshi Wada and Naoyuki Takesue},
   booktitle={2025 {IEEE/SICE} International Symposium on System Integration ({SII})},
   year={2025},
-  note={[Accepted]},
+  note={[Presented]},
   organization={IEEE}
 }
