Add update on cv and papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@INPROCEEDINGS{anuar2025selfstanding,
+  title={Self-Standing Take-Off of Servo Driven Flapping Robot Using Tail},
+  author={Anuar, Kaspul and Amemiya, Asami and Sato, Hidaka and Afakh, Muhammad Labiyb and Yunanto, Bagus and Wada, Kazuyoshi and Inasawa, Ayumu and Takesue, Naoyuki},
+  booktitle={2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year={2025},
+  organization={IEEE}
+}
+
 @INPROCEEDINGS{8228567,
   author={Afakh, Muhammad Labiyb and Risnumawan, Anhar and Anggraeni, Martianda Erste and Tamara, Mohamad Nasyir and Ningrum, Endah Suryawati},
   booktitle={2017 International Electronics Symposium on Knowledge Creation and Intelligent Computing (IES-KCIC)}, 
@@ -100,11 +108,14 @@
   year={2024},
   doi={10.20965/jrm.2024.p1156}
 }
-@inproceedings{2025servo,
-  title={Servo-Driven Flapping-Wing Aerial Vehicle ({FWAV}): {Payload} Capacity and Navigation Performance},
-  author={Muhammad Labiyb Afakh and Azhar Aulia Saputra and Hidaka Sato and Kazuyoshi Wada and Naoyuki Takesue},
-  booktitle={2025 {IEEE/SICE} International Symposium on System Integration ({SII})},
+@INPROCEEDINGS{10870592,
+  author={Afakh, Muhammad Labiyb and Saputra, Azhar Aulia and Sato, Hidaka and Wada, Kazuyoshi and Takesue, Naoyuki},
+  booktitle={2025 IEEE/SICE International Symposium on System Integration (SII)}, 
+  title={Servo-Driven Flapping-Wing Aerial Vehicle (FWAV): Payload Capacity and Navigation Performance}, 
   year={2025},
-  note={[Presented]},
-  organization={IEEE}
-}
+  volume={},
+  number={},
+  pages={1071-1076},
+  keywords={Actuators;Navigation;Tail;System integration;Hardware;Robustness;Environmental monitoring;Collision avoidance;Payloads;Gravity},
+  doi={10.1109/SII59315.2025.10870592}}
+
